[package]
name = "multi-party-eddsa"
version = "0.2.3"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]
edition = "2018"

[lib]
crate-type = [ "lib"]

[dependencies]
curv = { package = "curv-kzen", version = "0.7", default-features = false }
hex = "0.3.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[features]
default = ["curv/rust-gmp-kzen"]
