[package]
name = "multi-party-eddsa"
version = "0.2.3"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]
edition = "2018"

[[bin]]
name = "test"
path = "src/main.rs"

[dependencies]
curv = { package = "curv-kzen", version = "0.7", default-features = false }
hex = "0.3.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
reqwest = { version = "0.9", default-features = false }
uuid = { version = "0.8", features = ["v4"] }
aes-gcm = "0.9.4"
libsecp256k1 = "0.3.2"

[dependencies.paillier]
git = "https://github.com/KZen-networks/rust-paillier"
tag = "v0.3.10"
default-features = false


[features]
default = ["curv/rust-gmp-kzen"]

[[example]]
name = "gg18_keygen_client"

[[example]]
name = "common"
crate-type = ["lib"]

[[example]]
name = "sm_manager"